# jira-admin-mcp

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-registry.yml  publish.yml
jira_mcp/: __init__.py  client.py  config.py  helpers.py  server.py
jira_mcp/tools/: __init__.py  bulk.py  comments.py  fields.py  filters.py  groups.py  issues.py  issuetypes.py  links.py  permissions.py  projects.py  screens.py  statuses.py  tasks.py  users.py  workflows.py
tests/: conftest.py  test_config.py  test_helpers.py  test_server.py
